# QT

./: CMakeLists.txt  Main.qml  main.cpp  todomodel.cpp  todomodel.h
